--- a/stopwatch/stopfile.html
+++ b/stopwatch/stopfile.html
@@ -9,6 +9,8 @@
         <h1 id="timeDisplay">00:00:00</h1>
         <button id="begin">Begin</button>
         <button id="clear">Clear</button>
+        <button id="additionalReset">Reset</button>
+
     </div>
     <script src="stopwatch.js"></script>
 </body>
